Update MCP integration and S3 vectors notebooks

--- a/notebook/03-mcp-integration.ipynb
+++ b/notebook/03-mcp-integration.ipynb
@@ -24,18 +24,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "imports",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ Imports successful!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import boto3\n",
     "from strands import Agent\n",
@@ -211,30 +203,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "create-mcp-server-file",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ MCP server file created: mcp_custom_tools_server.py\n",
-      "\n",
-      "📝 Key MCP Server Components (SSE Transport):\n",
-      "================================================================================\n",
-      "1. from mcp.server import FastMCP\n",
-      "2. mcp = FastMCP('Custom Tools Server')\n",
-      "3. @mcp.tool() - Decorator to define tools\n",
-      "4. mcp.run(transport='sse') - Start SSE HTTP server\n",
-      "================================================================================\n",
-      "\n",
-      "🌐 SSE Server will run at: http://localhost:8000/sse\n",
-      "📡 Transport: Server-Sent Events (SSE)\n",
-      "✅ Best for: Web integrations, remote access, production\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create the MCP server file\n",
     "mcp_server_code = '''#!/usr/bin/env python3\n",
@@ -249,7 +221,7 @@
     "from mcp.server import FastMCP\n",
     "\n",
     "# Import video reader tool\n",
-    "from video_reader_local import video_reader_local\n",
+    "from multimodal_understanding.video_reader_local import video_reader_local\n",
     "\n",
     "# Create FastMCP server\n",
     "mcp = FastMCP(\"Custom Tools Server\")\n",
@@ -522,20 +494,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "mcp-client",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ MCP Client created\n",
-      "📡 Connecting to: http://localhost:8000/sse\n",
-      "⚠️  Make sure the MCP server is running in another terminal!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from mcp.client.sse import sse_client\n",
     "from strands.tools.mcp import MCPClient\n",
@@ -569,19 +531,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "create-mcp-agent-managed",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ Agent created with MCP tools (managed mode)!\n",
-      "📦 The agent will automatically connect and discover tools\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Setup Bedrock model\n",
     "session = boto3.Session(region_name='us-west-2')\n",
@@ -652,25 +605,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "test-calculator-mcp",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "=== 🧮 CALCULATOR TEST ===\n",
-      "I'll help you multiply those numbers using the calculator function.\n",
-      "Tool #1: calculator\n",
-      "456 multiplied by 789 equals 359,784.456 multiplied by 789 equals 359,784.\n",
-      "\n",
-      "\n",
-      "================================================================================\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Test 1: Calculator via MCP\n",
     "print(\"=== 🧮 CALCULATOR TEST ===\")\n",
@@ -681,25 +619,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "test-time-mcp",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "=== ⏰ TIME TEST ===\n",
-      "I'll check the current time for you.\n",
-      "Tool #2: get_current_time\n",
-      "The current time in UTC is 15:54:24 on November 11, 2025.The current time in UTC is 15:54:24 on November 11, 2025.\n",
-      "\n",
-      "\n",
-      "================================================================================\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Test 2: Time via MCP\n",
     "print(\"=== ⏰ TIME TEST ===\")\n",
@@ -710,35 +633,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "test-video-mcp",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "=== 🎥 VIDEO ANALYSIS TEST ===\n",
-      "I'll analyze the video at the specified path using the video analysis tool.\n",
-      "Tool #3: analyze_video\n",
-      "Based on the analysis, the video shows a sequence of scenes involving smoking and alcohol:\n",
-      "1. First, there's a person on a couch with a beer bottle who opens it using a red object\n",
-      "2. The same person is then shown holding the beer bottle (with a red cap) and smoking a cigarette\n",
-      "3. The scene then changes to show a woman in a grassy field, holding and then smoking a cigarette\n",
-      "\n",
-      "The video appears to contain adult content related to alcohol consumption and smoking.Based on the analysis, the video shows a sequence of scenes involving smoking and alcohol:\n",
-      "1. First, there's a person on a couch with a beer bottle who opens it using a red object\n",
-      "2. The same person is then shown holding the beer bottle (with a red cap) and smoking a cigarette\n",
-      "3. The scene then changes to show a woman in a grassy field, holding and then smoking a cigarette\n",
-      "\n",
-      "The video appears to contain adult content related to alcohol consumption and smoking.\n",
-      "\n",
-      "\n",
-      "================================================================================\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Test 3: Video analysis via MCP\n",
     "print(\"=== 🎥 VIDEO ANALYSIS TEST ===\")\n",
@@ -751,29 +649,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "test-multi-tool-mcp",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "=== 🔧 MULTI-TOOL TEST ===\n",
-      "I'll help you with both requests by using the time and calculator functions.\n",
-      "Tool #4: get_current_time\n",
-      "\n",
-      "Tool #5: calculator\n",
-      "The current time is 15:54:49 UTC on November 11, 2025.\n",
-      "And 123 + 456 = 579.The current time is 15:54:49 UTC on November 11, 2025.\n",
-      "And 123 + 456 = 579.\n",
-      "\n",
-      "\n",
-      "================================================================================\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Test 4: Multiple tools in one request\n",
     "print(\"=== 🔧 MULTI-TOOL TEST ===\")\n",
@@ -796,46 +675,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "practical-mcp",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "=== 🎯 PRACTICAL EXAMPLE: Content Moderation ===\n",
-      "I'll help you with this content moderation analysis step by step.\n",
-      "\n",
-      "1. First, let's get the current time:\n",
-      "Tool #6: get_current_time\n",
-      "2. Now, let's analyze the video:\n",
-      "Tool #7: analyze_video\n",
-      "3. Based on the analysis, there are concerning elements that warrant a risk score calculation. The video contains:\n",
-      "- Alcohol consumption (beer drinking)\n",
-      "- Tobacco use (cigarette smoking)\n",
-      "\n",
-      "Let me calculate a risk score based on these elements. Since both alcohol and tobacco use are age-restricted activities but legal in many jurisdictions, I'll calculate a moderate risk score:\n",
-      "Tool #8: calculator\n",
-      "Summary Report:\n",
-      "- Analysis Time: 15:55:51 UTC on November 11, 2025\n",
-      "- Content: Video shows alcohol consumption and tobacco use\n",
-      "- Risk Score: 70/100 \n",
-      "  (Calculated by assigning 35 points each for alcohol and tobacco content, as these are age-restricted substances that require content warnings and moderation for younger audiences)\n",
-      "\n",
-      "Recommendation: This content should be marked as adult content and age-restricted due to the presence of alcohol consumption and tobacco use.Summary Report:\n",
-      "- Analysis Time: 15:55:51 UTC on November 11, 2025\n",
-      "- Content: Video shows alcohol consumption and tobacco use\n",
-      "- Risk Score: 70/100 \n",
-      "  (Calculated by assigning 35 points each for alcohol and tobacco content, as these are age-restricted substances that require content warnings and moderation for younger audiences)\n",
-      "\n",
-      "Recommendation: This content should be marked as adult content and age-restricted due to the presence of alcohol consumption and tobacco use.\n",
-      "\n",
-      "\n",
-      "================================================================================\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Real-world scenario: Video content moderation with timestamp\n",
     "print(\"=== 🎯 PRACTICAL EXAMPLE: Content Moderation ===\")\n",
@@ -1082,7 +925,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
