--- a/notebook/multimodal_understanding/04-multimodal-with-s3-vectors.ipynb
+++ b/notebook/multimodal_understanding/04-multimodal-with-s3-vectors.ipynb
@@ -95,9 +95,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Configure S3 Vectors (bucket and index will be created automatically)\n",
-    "os.environ['VECTOR_BUCKET_NAME'] = 'multimodal-vector-store'  # Choose your bucket name\n",
-    "os.environ['VECTOR_INDEX_NAME'] = 'strands-multimodal'        # Choose your index name\n",
+    "# Configure S3 Vectors (bucket and index will be created automatically if they don't exist)\n",
+    "# ⚠️ CHANGE THIS!\n",
+    "os.environ['VECTOR_BUCKET_NAME'] = 'YOUR-INDEX-NAME'  # Choose your bucket name \n",
+    "# ⚠️ CHANGE THIS!\n",
+    "os.environ['VECTOR_INDEX_NAME'] = 'YOU-BUCKET-NAME'        # Choose your index name  \n",
     "os.environ['AWS_REGION'] = 'us-east-1'                       # Your AWS region\n",
     "os.environ['EMBEDDING_MODEL'] = 'amazon.nova-2-multimodal-embeddings-v1:0'  # Nova embeddings\n",
     "\n",
