Update travel assistant demo notebook

--- a/notebook/multimodal_understanding/06-travel-assistant-demo.ipynb
+++ b/notebook/multimodal_understanding/06-travel-assistant-demo.ipynb
@@ -201,7 +201,7 @@
     "    \n",
     "    Here's what I love:\n",
     "    - **Architecture**: I'm fascinated by modern architecture, especially Art Nouveau and Modernist styles\n",
-    "    - **Food**: I prefer vegetarian cuisine and love exploring local food markets\n",
+    "    - **Food**: I prefer gluthen free cuisine and love exploring local food markets\n",
     "    - **Sustainability**: I try to travel sustainably - public transport, eco-friendly hotels, supporting local businesses\n",
     "    - **Activities**: I enjoy walking tours, photography, and cultural experiences over beach/resort vacations\n",
     "    - **Pace**: I prefer a relaxed pace with time to really experience each place\n",
